--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "http://152.42.208.53:80/dashboard"
+      "destination": "http://152.42.208.53:80/dash"
     }
   ]
 }
